# tt-top

./: .gitignore  BBS_STYLE_README.md  CLAUDE.md  FORK_MAINTENANCE_SUMMARY.md  GITHUB_MIGRATION_GUIDE.md  GIT_WORKFLOW.md  INSTALL_TTTOP.md  PERSONAL_REPO_RENAME.md  README.md  TT_SMI_RESEARCH_REPORT.md  TT_TOP_CLEANUP_GUIDE.md  TT_TOP_IMPLEMENTATION.md  TT_TOP_PROJECT_SUMMARY.md  WORKLOAD_DETECTION.md  check_upstream.sh  cleanup_tttop.sh  configure_workload.py  demo_safety_features.py  demo_tt_top.py  pyproject.toml  setup.py  show_bbs_demo.py  sync_upstream.sh  test_animated_display.py  test_cli_args.py  test_fixed_widget.py  test_widget_syntax.py  tt_top.py  validate_tttop.py
examples/: basic_usage.py
tests_tt_top/: __init__.py  run_tests.py  test_backend_integration.py  test_performance.py  test_safety_core.py  test_safety_measures.py  test_tt_top_app.py  test_tt_top_widget.py
tt_smi/: constants.py  tt_smi.py  tt_smi_backend.py  tt_top_widget.py  workload_config.py
tt_top/: __init__.py  animated_display.py  constants.py  mock_hardware.py  safety.py  simple_animated_display.py  tt_smi_backend.py  tt_top_app.py  tt_top_widget.py  version.py
