[project]
name = "tt-top"
version = "1.0.0"
description = "Real-time hardware monitoring for Tenstorrent silicon with advanced telemetry visualization"
readme = "README_TTTOP.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Hardware",
  "Topic :: System :: Monitoring",
]
dependencies = [
  'distro>=1.8.0',
  'pydantic>=1.2',
  'tt_tools_common==1.4.29',
  'pyluwen==0.7.11',
  'rich>=13.7.0',
  'textual>=0.59.0',
  'importlib_resources>=6.1.1',
  'setuptools',
  'tomli',
  'psutil>=5.9.0',
]

optional-dependencies.dev = [
  "black == 24.10.0; python_version >= '3.9'",
  "black == 24.8.0; python_version == '3.8'",
  "black == 23.3.0; python_version == '3.7'"
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-top/issues"
"Source" = "https://github.com/tenstorrent/tt-top"

[project.scripts]
tt-top = "tt_top:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  'data/version.txt',
  "*.css",
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tool.setuptools.exclude-package-data]
"*" = [
  'build',
  'debian',
  'images',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai